# xreader-hg

./: Changelog.txt  Makefile.am  Revision.py  configure.ac
audioplugin/dummy/: Makefile.am  imports.S  main.c
contrib/jpeg/: jdatasrc.c
contrib/mac-411-psp-port/Console/: Console.cpp
contrib/mac-411-psp-port/MACDll/: CEEncoder.cpp  MACDll.vcproj  Winamp2.cpp  stdafx.h
contrib/mac-411-psp-port/MACLib/: APEInfo.cpp  APELink.cpp  (+3 more)
contrib/unrar/: README.PSP  makefile.psp
msg/: xReader.pot
src/: Makefile.am  aa3player.c  aacplayer.c  apeplayer.cpp  archive.c  archive.h  at3player.c  bg.c  bg.h  bookmark.c  buffered_reader.c  charsets.c  charsets.h  clock.c  conf.c  conf.h  copy.c  copy.h  ctrl.c  dbg.c  depdb.c  display.c  display.h  exception.c  exports.exp  fat.c  fat.h  flacplayer.c  freq_lock.c  freq_lock.h  fs.c  fs.h  genericplayer.c  genericplayer.h  html.c  image.c  image.h  image_queue.h  image_queue_server.c  location.c  (+45 more)
src/audiocore/: aa3player.c  aacplayer.c  apeplayer.cpp  at3player.c  buffered_reader.c  buffered_reader.h  flacplayer.c  genericplayer.c  genericplayer.h  lyric.c  lyric.h  m4aplayer.c  mediaengine.c  mp3info.c  mp3info.h  mp3info_buffered.c  mp3player.c  mpcplayer.c  musicdrv.c  musicinfo.c  musicmgr.c  oggplayer.c  ttaplayer.c  wavplayer.c  wmaplayer.c  wvplayer.c  xaudiolib.c  xaudiolib.h
src/common/: datatype.h  utils.c  utils.h
src/include/: systemctrl.h
src/tta/: ttadec.c
testsuite/: Makefile.am  jpeg_speed_test.c  main.c  rar_speed_test.c
xrPrx/: Makefile.am  exports.exp  main.c  xrPrx.h
xr_rdriver/: main.c
(+14 files in other folders)
